--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #29a3d2;
+  --ifm-color-primary-dark: #2593bd;
+  --ifm-color-primary-darker: #238bb3;
+  --ifm-color-primary-darkest: #1d7293;
+  --ifm-color-primary-light: #3badd9;
+  --ifm-color-primary-lighter: #46b1db;
+  --ifm-color-primary-lightest: #65bfe1;
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #29a3d2;
+  --ifm-color-primary-dark: #2593bd;
+  --ifm-color-primary-darker: #238bb3;
+  --ifm-color-primary-darkest: #1d7293;
+  --ifm-color-primary-light: #3badd9;
+  --ifm-color-primary-lighter: #46b1db;
+  --ifm-color-primary-lightest: #65bfe1;
+  --ifm-background-color: #3b3b3b;
 }
 
 .docusaurus-highlight-code-line {
